@@ -11,4 +11,5 @@ t/01sanity.t
 t/02interval.t
 t/03by.t
 t/04rfc2445.t
+t/05byday.t
 
